@@ -1197,8 +1197,10 @@ tmpnam_s
 vfprintf_s
 vfwprintf_s
 vprintf_s
-vsnprintf DATA == _vsnprintf
+vsnprintf == _vsnprintf
 snprintf == _snprintf
+snwprintf == _snwprintf
+vsnwprintf == _vsnwprintf
 vsprintf_s
 vswprintf_s
 vwprintf_s
